--- a/style_new_2.css
+++ b/style_new_2.css
@@ -61,7 +61,7 @@ body .container {
 
 .bg{
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-color: #FAFAFA;
   background-image: url('Img/BG.jpg');
   background-position: center;
