--- a/style_new_2.css
+++ b/style_new_2.css
@@ -81,6 +81,8 @@ body .container {
 	 width: 150%;
 }*/
 
+/*
+
 svg .inactive {
 	 animation: none;
 }
@@ -174,12 +176,14 @@ svg .menu-active, svg .menu-hover {
 	}
 }
 
+*/
+
 .title{
   font-family: 'GolosWebTextBold';
   font-size: 2.875em;
   color: #000000;
   margin-top: 1.25em;
-  position: relative;
+  /*position: relative;*/
 }
 
 .circle_icon{
